toolchain/internal/core/analysis/testdata/errors/naming/annotation_not_camel.vdl
// format:off
// @expect: E102

@BadAnn
type User {
  id string
}
